<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/restaurant_name_placeholder"
            android:id="@+id/restaurantNameLabel"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_type_placeholder"
            android:id="@+id/restaurantTypeLabel"
            android:layout_below="@+id/ratingBar" android:layout_alignParentStart="true"
            android:layout_marginTop="5dip" android:layout_toLeftOf="@+id/imageView"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:numStars="5"
            android:layout_below="@+id/restaurantNameLabel" android:layout_alignParentStart="true"
            style="@style/Base.Widget.AppCompat.RatingBar.Small" android:rating="5" android:layout_marginTop="5dip"
            android:progressTint="#ff9100" android:minHeight="20dip" android:maxHeight="20dip"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_price_placeholder"
            android:id="@+id/restaurantPriceRangeLabel"
            android:layout_above="@+id/restaurantDistanceLabel" android:layout_alignEnd="@+id/restaurantDistanceLabel"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_distance_placeholder"
            android:id="@+id/restaurantDistanceLabel"
            android:layout_alignTop="@+id/restaurantTypeLabel" android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/restaurantTypeLabel" android:textColor="#000000"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/review_amount_placeholder"
            android:id="@+id/restaurantReviewAmountLabel"
            android:layout_toEndOf="@+id/ratingBar"
            android:layout_toLeftOf="@+id/ratingBar" android:layout_alignTop="@+id/ratingBar"
            android:layout_alignBottom="@+id/ratingBar" android:layout_marginLeft="10dip"
            android:gravity="center_vertical"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:layout_alignBottom="@+id/restaurantDistanceLabel"
            android:layout_toStartOf="@+id/restaurantDistanceLabel" android:src="@mipmap/ic_place_black_18dp"
            android:layout_marginRight="3dip" android:layout_alignTop="@+id/restaurantDistanceLabel"
    />
</RelativeLayout>