<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/restaurantImageFlipper" android:layout_alignParentTop="true">

    </ViewFlipper>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/restaurant_name_placeholder"
            android:id="@+id/restaurantDetailName" android:layout_alignParentTop="false" android:layout_alignParentStart="true"
            android:layout_below="@+id/restaurantImageFlipper" android:layout_marginTop="10dp"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurantRatingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:numStars="5"
            android:rating="4.8" android:progressTint="#ff9100" android:maxHeight="20dp" android:minHeight="20dp"
            android:layout_alignTop="@+id/restaurantDetailRatingNum" android:layout_toEndOf="@+id/restaurantDetailRatingNum"
            android:layout_marginTop="4dp" android:layout_marginLeft="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/restaurant_rating_placeholder"
            android:id="@+id/restaurantDetailRatingNum"
            android:layout_alignParentStart="true" android:layout_below="@+id/restaurantDetailName"
            android:layout_marginTop="5dp" android:textColor="#ff9100"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/review_amount_placeholder"
            android:id="@+id/restaurantDetailReviewAmount" android:layout_alignBottom="@+id/restaurantRatingBar"
            android:layout_centerHorizontal="true" android:layout_toRightOf="@+id/restaurantRatingBar"
            android:layout_marginLeft="15dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_type_placeholder"
            android:id="@+id/restaurantDetailCategory" android:layout_below="@+id/restaurantDetailRatingNum"
            android:layout_alignParentStart="true" android:layout_marginTop="10dp" android:textColor="#000000"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_price_placeholder"
            android:id="@+id/restaurantDetailPrice"
            android:textColor="#000000"
            android:layout_alignTop="@+id/restaurantDetailCategory" android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_address_placeholder"
            android:drawableLeft="@mipmap/ic_place_black_24dp"
            android:drawablePadding="10dp"
            android:id="@+id/restaurantDetailAddress" android:layout_below="@+id/restaurantDetailCategory"
            android:layout_alignParentStart="true" android:textColor="#000000" android:maxLines="2"
            android:drawableTint="#42a5f5" android:layout_marginTop="10dp" android:ellipsize="end"
            android:autoLink="map"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/restaurant_website_placeholder" android:drawableLeft="@mipmap/ic_public_black_24dp"
              android:drawablePadding="10dp" android:id="@+id/restaurantDetailWebsite"
              android:textColor="#000000" android:maxLines="2" android:drawableTint="#42a5f5"
              android:ellipsize="end" android:layout_below="@+id/restaurantDetailAddress"
              android:layout_alignParentStart="true" android:layout_marginTop="10dp" android:autoLink="web"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" android:layout_below="@+id/restaurantDetailWebsite"
            android:id="@+id/restaurantDetailTimesView">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:text="@string/restaurant_opening_placeholder" android:drawableLeft="@mipmap/ic_access_time_black_24dp"
                  android:drawablePadding="10dp" android:id="@+id/restaurantDetailOpeningTimes" android:textColor="#000000"
                  android:maxLines="2" android:drawableTint="#42a5f5" android:ellipsize="end"
                  android:autoLink="web" android:layout_below="@+id/restaurantDetailWebsite"
                  android:layout_alignParentStart="true" android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp" android:layout_weight="2"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/expandIcon"
                android:layout_alignParentEnd="true" android:src="@mipmap/ic_arrow_drop_up_black_24dp"
                android:layout_alignTop="@+id/restaurantDetailOpeningTimes"
                android:layout_alignBottom="@+id/restaurantDetailOpeningTimes" android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>