<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <!--<DatePicker-->
        <!--android:id="@+id/datePicker"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignEnd="@+id/spinnerTime"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:calendarViewShown="false"-->
        <!--android:datePickerMode="spinner" />-->

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="date"
            android:text="@string/date" />

        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/date"
            android:layout_marginTop="55dp" />

        <Spinner
            android:id="@+id/spinnerTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView3"
            android:visibility="invisible" />

        <Button
            android:id="@+id/reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="74dp"
            android:text="@string/reserve" />

        <Spinner
            android:id="@+id/spinnerSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerTime"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinnerTime"
            android:layout_alignBottom="@+id/spinnerTime"
            android:layout_alignEnd="@+id/reserve"
            android:text="@string/availableTimes" />

        <TextView
            android:id="@+id/seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinnerSeats"
            android:layout_centerHorizontal="true"
            android:text="@string/nrOfPeople"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerSeats"
            android:layout_centerHorizontal="true"
            android:text="@string/table"
            android:visibility="invisible" />


    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>