<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/restaurant_rating_placeholder" android:id="@+id/restaurantRatingNum"
              android:layout_alignParentStart="true"
              android:layout_marginTop="5dp" android:textColor="#ff9100" android:textSize="22sp"/>
    <RatingBar style="@style/Widget.AppCompat.RatingBar.Small" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:id="@+id/restaurantRatingBar" android:numStars="5"
               android:rating="4.8" android:progressTint="#ff9100" android:maxHeight="20dp" android:minHeight="20dp"
               android:layout_alignTop="@+id/restaurantRatingNum"
               android:layout_marginLeft="5dp"
               android:layout_alignBottom="@+id/restaurantRatingNum" android:layout_marginTop="4dp"
               android:layout_toEndOf="@id/restaurantRatingNum"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/review_amount_placeholder" android:id="@+id/restaurantReviewAmount"
              android:layout_alignBottom="@+id/restaurantRatingBar" android:layout_centerHorizontal="true"
              android:layout_toRightOf="@+id/restaurantRatingBar" android:layout_marginLeft="15dp"
              android:layout_alignTop="@+id/restaurantRatingBar" android:gravity="center_vertical"
              android:textSize="18sp"/>
    <RatingBar style="@style/Widget.AppCompat.RatingBar.Small" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:id="@+id/reviewStars5" android:numStars="5"
               android:rating="5" android:progressTint="#666666" android:maxHeight="20dp" android:minHeight="20dp"
               android:layout_below="@+id/restaurantRatingNum" android:layout_alignParentStart="false"
               android:layout_alignLeft="@+id/restaurantRatingNum" android:layout_marginTop="15dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/reviewPercentage5"
            android:progress="100" android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/reviewStars5"
            android:progressDrawable="@drawable/custom_progressbar" android:layout_alignTop="@+id/reviewStars5"
            android:layout_alignBottom="@+id/reviewStars5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_amount_placeholder2"
            android:id="@+id/reviewAmount5"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_alignTop="@+id/reviewPercentage5" android:layout_toEndOf="@+id/reviewPercentage5"
            android:layout_alignBottom="@+id/reviewPercentage5"
            android:layout_marginLeft="5dp"/>
    <RatingBar style="@style/Widget.AppCompat.RatingBar.Small" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:id="@+id/reviewStars4" android:numStars="5"
               android:rating="4" android:progressTint="#666666" android:maxHeight="20dp" android:minHeight="20dp"
               android:layout_below="@+id/reviewStars5" android:layout_alignParentStart="false"
               android:layout_alignLeft="@+id/reviewStars5" android:layout_marginTop="2dp"
    />
    <ProgressBar style="?android:attr/progressBarStyleHorizontal" android:layout_width="200dp"
                 android:layout_height="wrap_content" android:id="@+id/reviewPercentage4" android:progress="100"
                 android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/reviewStars4"
                 android:progressDrawable="@drawable/custom_progressbar" android:layout_alignTop="@+id/reviewStars4"
                 android:layout_alignBottom="@+id/reviewStars4" android:progressTint="#5fac00"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/review_amount_placeholder2" android:id="@+id/reviewAmount4"
              android:layout_alignTop="@+id/reviewPercentage4"
              android:textSize="14sp"
              android:layout_alignBottom="@+id/reviewPercentage4"
              android:gravity="center_vertical" android:layout_toEndOf="@id/reviewPercentage4"
              android:layout_marginLeft="5dp"/>
    <RatingBar style="@style/Widget.AppCompat.RatingBar.Small" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:id="@+id/reviewStars3" android:numStars="5"
               android:rating="3" android:progressTint="#666666" android:maxHeight="20dp" android:minHeight="20dp"
               android:layout_below="@+id/reviewStars4" android:layout_alignParentStart="false"
               android:layout_alignLeft="@+id/reviewStars4" android:layout_marginTop="2dp"/>
    <ProgressBar style="?android:attr/progressBarStyleHorizontal" android:layout_width="200dp"
                 android:layout_height="wrap_content" android:id="@+id/reviewPercentage3" android:progress="100"
                 android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/reviewStars3"
                 android:progressDrawable="@drawable/custom_progressbar" android:layout_alignTop="@+id/reviewStars3"
                 android:layout_alignBottom="@+id/reviewStars3" android:progressTint="#e2c802"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/review_amount_placeholder2" android:id="@+id/reviewAmount3"
              android:layout_alignTop="@+id/reviewPercentage3" android:textSize="14sp"
              android:layout_alignBottom="@+id/reviewPercentage3" android:gravity="center_vertical"
              android:layout_toEndOf="@id/reviewPercentage3" android:layout_marginLeft="5dp"/>
    <RatingBar style="@style/Widget.AppCompat.RatingBar.Small" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:id="@+id/reviewStars2" android:numStars="5"
               android:rating="2" android:progressTint="#666666" android:maxHeight="20dp" android:minHeight="20dp"
               android:layout_below="@+id/reviewStars3" android:layout_alignParentStart="false"
               android:layout_alignLeft="@+id/reviewStars3" android:layout_marginTop="2dp"/>
    <ProgressBar style="?android:attr/progressBarStyleHorizontal" android:layout_width="200dp"
                 android:layout_height="wrap_content" android:id="@+id/reviewPercentage2" android:progress="100"
                 android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/reviewStars2"
                 android:progressDrawable="@drawable/custom_progressbar" android:layout_alignTop="@+id/reviewStars2"
                 android:layout_alignBottom="@+id/reviewStars2" android:progressTint="#e26b02"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/review_amount_placeholder2" android:id="@+id/reviewAmount2"
              android:layout_alignTop="@+id/reviewPercentage2" android:textSize="14sp"
              android:layout_alignBottom="@+id/reviewPercentage2" android:gravity="center_vertical"
              android:layout_toEndOf="@id/reviewPercentage2" android:layout_marginLeft="5dp"/>
    <RatingBar style="@style/Widget.AppCompat.RatingBar.Small" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:id="@+id/reviewStars1" android:numStars="5"
               android:rating="1" android:progressTint="#666666" android:maxHeight="20dp" android:minHeight="20dp"
               android:layout_below="@+id/reviewStars2" android:layout_alignParentStart="false"
               android:layout_alignLeft="@+id/reviewStars2" android:layout_marginTop="2dp"
    />
    <ProgressBar style="?android:attr/progressBarStyleHorizontal" android:layout_width="200dp"
                 android:layout_height="wrap_content" android:id="@+id/reviewPercentage1" android:progress="100"
                 android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/reviewStars1"
                 android:progressDrawable="@drawable/custom_progressbar" android:layout_alignTop="@+id/reviewStars1"
                 android:layout_alignBottom="@+id/reviewStars1" android:progressTint="#e23302"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/review_amount_placeholder2" android:id="@+id/reviewAmount1"
              android:layout_alignTop="@+id/reviewPercentage1" android:textSize="14sp"
              android:layout_alignBottom="@+id/reviewPercentage1" android:gravity="center_vertical"
              android:layout_toEndOf="@id/reviewPercentage1" android:layout_marginLeft="5dp"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#bdbdbd"
          android:layout_below="@+id/reviewStars1" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
          android:id="@+id/headerDivider"/>
</RelativeLayout>